--- a/stylesheets/application.scss
+++ b/stylesheets/application.scss
@@ -19,10 +19,9 @@
 // Core
 @import "base/colors.scss";
 @import "base/fonts.scss";
-@import "base/layout.scss";
+@import "base/images.scss";
 
-// Grid
-@import "base/grid.scss";
+
 
 // Components
-@import "components/*";
+@import "components/levels.scss";
