--- a/application.css
+++ b/application.css
@@ -121,4 +121,92 @@ input[type=submit] {
   cursor: pointer;
 }
 
+#globe {
+  flex-direction: column;
+}
+
+.question-hidden {
+  display: none;
+}
+
+.question-shown {
+  flex-direction: column;
+  left: 750px;
+  bottom: 350px;
+}
+.question-shown #form-question {
+  margin-top: 100px;
+}
+.question-shown #form-question #question {
+  margin-bottom: 10px;
+  font-family: "Lucida Console", Monaco, monospace;
+  font-size: 25px;
+  color: white;
+}
+.question-shown #form-question #fill-country:focus {
+  outline: none;
+}
+.question-shown #form-question #fill-country {
+  width: 170px;
+  height: 40px;
+  font-family: "Lucida Console", Monaco, monospace;
+  font-size: 17px;
+  margin-left: 150px;
+  border-radius: 20px;
+}
+.question-shown #form-question #fill-country:focus {
+  outline: none;
+}
+.question-shown #form-question #fill-country {
+  width: 170px;
+  height: 40px;
+  font-family: "Lucida Console", Monaco, monospace;
+  font-size: 17px;
+  margin-left: 150px;
+  border-radius: 20px;
+}
+.question-shown #form-question #enter {
+  font-family: "Lucida Console", Monaco, monospace;
+  padding-top: 7px;
+  padding-bottom: 7px;
+  padding-right: 12px;
+  padding-left: 12px;
+  color: black;
+  background-color: white;
+  border: solid white;
+  border-radius: 7px;
+  font-weight: bold;
+  font-size: 16px;
+  width: 70px;
+  margin-left: 200px;
+}
+.question-shown #form-question #enter:hover {
+  font-family: "Lucida Console", Monaco, monospace;
+  padding-top: 7px;
+  padding-bottom: 7px;
+  padding-right: 12px;
+  padding-left: 12px;
+  color: white;
+  background-color: black;
+  border: solid white;
+  border-radius: 7px;
+  font-weight: bold;
+  font-size: 16px;
+  cursor: pointer;
+  width: 70px;
+  margin-left: 200px;
+}
+.question-shown #form-question #enter:focus {
+  outline: none;
+}
+.question-shown #form-question .try-again-hidden {
+  display: none;
+}
+.question-shown #form-question .try-again {
+  position: absolute;
+  top: 220px;
+  font-size: 17px;
+  left: 335px;
+}
+
 /*# sourceMappingURL=application.css.map */
