Modifications of 3 tries done and need to be refactored

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -175,7 +175,11 @@ input[type="submit"] {
       outline: none; }
     #right-side #form-question #try-again {
       font-size: 18px;
-      margin-left: 21vw;
+      margin-left: 13vw;
       margin-top: 4vh; }
+    #right-side #form-question #last-encouragement {
+      text-align: center;
+      margin: 8vh 4vw 0vh 8vw;
+      line-height: 3vh; }
 
 /*# sourceMappingURL=application.css.map */
