--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -123,7 +123,8 @@ input[type="submit"] {
     display: flex;
     flex-direction: row;
     line-height: 10vh;
-    margin-left: 30vw; }
+    margin-left: auto;
+    margin-right: 6vw; }
     #right-side #score #star {
       padding-right: 1vw; }
   #right-side #form-question {
@@ -156,11 +157,12 @@ input[type="submit"] {
       border-radius: 7px;
       font-weight: bold;
       font-size: 16px;
-      margin-left: 17.5vw;
+      margin-left: 18.5vw;
       margin-top: 8vh;
       width: 10vw;
       height: 3vh;
-      padding-left: 3vw; }
+      padding-left: 3vw;
+      padding-right: 3vw; }
     #right-side #form-question #enter:hover {
       color: white;
       background-color: black;
@@ -168,11 +170,12 @@ input[type="submit"] {
       border-radius: 7px;
       font-weight: bold;
       font-size: 16px;
-      margin-left: 17.5vw;
+      margin-left: 18.5vw;
       margin-top: 8vh;
       width: 10vw;
       height: 3vh;
-      padding-left: 3vw; }
+      padding-left: 3vw;
+      padding-right: 3vw; }
     #right-side #form-question #enter:focus {
       outline: none; }
     #right-side #form-question #try-again {
