--- a/stylesheets/components/question.scss
+++ b/stylesheets/components/question.scss
@@ -13,7 +13,8 @@
   display: flex;
   flex-direction: row;
   line-height: 10vh;
-  margin-left: 30vw;
+  margin-left: auto;
+  margin-right: 6vw;
   #star{
     padding-right: 1vw;
   }
@@ -57,11 +58,12 @@
             border-radius: 7px;
             font-weight: bold;
             font-size: 16px;
-            margin-left: 17.5vw;
+            margin-left: 18.5vw;
             margin-top: 8vh;
             width: 10vw;
             height: 3vh;
             padding-left: 3vw;
+            padding-right: 3vw;
           }
           
           #enter:hover{
@@ -71,11 +73,12 @@
             border-radius: 7px;
             font-weight: bold;
             font-size: 16px;
-            margin-left: 17.5vw;
+            margin-left: 18.5vw;
             margin-top: 8vh;
             width: 10vw;
             height: 3vh;
             padding-left: 3vw;
+            padding-right: 3vw;
           }
           
           #enter:focus{
